# GNPBU_tg_bot

./: .gitignore  README.md  bot.py  pyproject.toml
handlers/: add_remove_unreg_users_handlers.py  add_to_repository_handlers.py  get_statistics.py  registration_user_handlers.py  user_handlers.py
keyboards/: keyboards.py
lexicon/: lexicon_ru.py
process/: check_fsm_data.py  check_process_add_to_repo.py  check_user.py  process_add_to_irbis_repo.py  process_get_excel_statistics.py  process_get_maxi_statistics.py  process_get_statistics.py  process_send_email.py  process_serch_new_users.py  register_tg_id_to_server.py  send_pdf.py
