[tool.poetry]
name = "gnpbu-tg-repo-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
environs = "^9.5.0"
irbis = "^0.2.376"
apscheduler = "^3.10.4"
aiogram-calendar = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
